
Windows port:
 * Integration in Windows 7 taskbar

Maemo port:
 * Multiple improvements for N900 compliance and efficiency

Removed modules:
 * csri
 * galaktos
 * showintf
 * transrate
 * Xlib x11, Xlib xvideo (use XCB instead)
 * HAL (use libudev instead)
 * gtk_main, gtk_main2, gnome_main, gnome_main2 and pda interfaces
 * linear_resampler and trivial_resampler are removed. Use the ugly one.


Changes between 1.0.2 and 1.0.3:
--------------------------------

Video outputs:
 * Fix video quality when resizing the video on Windows Vista and 7, due to
   regressions in most popular drivers
 * New deinterlacers modules based on yadif and yadif(x2) algorithms

Decoders:
 * Windows version supports now natively the WMA Professional codec, as it
   didn't work in the packaged version of 1.0.2
 * Fix downmixing of particual 4.0 AC-3 audio tracks

Encoders:
 * x264 has profile-limitter, like:
    #transcode{vcodec=h264,venc=x264{profile=baseline,level=12}..}

Input:
 * Update for appletrailers lua script
 * Fixes on the RAR stream filter
 * Fix for E-AC3 in ATSC/TS streams
 * Various fixes for v4l and v4l2
 * Fix a crash in mjpeg demuxer

Service discovery:
 * New udev module for linux

Qt4 interface:
 * Fixes on the playlist and the stream output panels

Translations:
 * French, Galician, Korean, Polish, Russian, Romanian, Slovak and Ukrainian updates


Changes between 1.0.1 and 1.0.2:
--------------------------------

Decoders:
 * Native support for WMA Professional, without the use of the Win32 dlls
 * Fix issues in subtitles, especially SSA ones
 * Various fixes on theora and ogg

Demuxers:
 * Various fixes for EPG support in MPEG-TS demuxer
 * Fixes for potential stack overflow in .avi, .mp4 and .asf demuxers

Access:
 * Fixes for v4l2 devices
 * Fixes for dvb-c channels-scanning

Qt Interface:
 * Fix some playlist sorting issues

Mac OS X Interface:
 * Fixed a crash when updating VLC
 * Fixed a crash related to QTKit when opening video files (10.6 only)